...
      } else {
        dc.showAlertDialog(context, 'Error', "Debe rellenar todos los campos");
      }
    }

    return GestureDetector(
        key: Key('registerG'),
        onTap: () {
          FocusScope.of(context).requestFocus(FocusNode());
        },
        child: Scaffold(
            body: Stack(
          children: [
...
                          ),
                          //Spacer(),
                          SizedBox(
                            height: 58.0,
                          ),
                          textbox(
                              nameController, "Nombre", false, 'nameR', nfocus),
                          SizedBox(
                            height: 38.0,
                          ),
                          textbox(emailController, "Correo electrónico", false,
                              'emailR', efocus),
                          SizedBox(
                            height: 38.0,
                          ),
                          textbox(passwordController, "Contraseña", true,
                              'passwordR', pfocus),
                          SizedBox(
                            height: 38.0,
                          ),
                          textbox(conpasswordController, "Confirmar contraseña",
                              true, 'confirmationPass', pcfocus),
                          Container(
                            padding: const EdgeInsets.only(top: 10),
                            child: Text(dc.errorMessage,
                                style: new TextStyle(
                                  color: Color.fromRGBO(255, 154, 81, 1),
                                )),
...
                          Row(
                            children: [
                              Container(
                                padding: const EdgeInsets.only(left: 25.0),
                                height: 50,
                                child: MaterialButton(
                                  child: Text("Registrar",
                                      style: new TextStyle(
                                        fontSize: 20.0,
                                      )),
                                  color: Color.fromRGBO(255, 154, 81, 1),
                                  shape: RoundedRectangleBorder(
                                      borderRadius:
...
