...
      } else {
        dc.showAlertDialog(context, 'Error', "Debe rellenar todos los campos");
      }
    }

    return GestureDetector(
        key: Key('loginG'),
        onTap: () {
          FocusScope.of(context).requestFocus(FocusNode());
        },
        child: Scaffold(
          body: Stack(
            children: [
...
                              ),
                            ]),
                        SizedBox(
                          height: 58.0,
                        ),
                        textbox(emailController, "Correo electrónico", false,
                            'emailL', efocus),
                        SizedBox(
                          height: 38.0,
                        ),
                        textbox(passwordController, "Contraseña", true,
                            'passwordL', pfocus),
                        // Container(
                        //   padding: const EdgeInsets.only(top: 10),
                        //   child: Text(dc.errorMessage,
                        //       style: new TextStyle(
                        //         color: Color.fromRGBO(255, 154, 81, 1),
                        //       )),
...
                        Row(
                          children: [
                            Container(
                              padding: const EdgeInsets.only(left: 30.0),
                              height: 50,
                              child: MaterialButton(
                                  child: Text("Ingresar",
                                      style: new TextStyle(
                                        fontSize: 20.0,
                                      )),
                                  color: Color.fromRGBO(255, 154, 81, 1),
                                  shape: RoundedRectangleBorder(
                                      borderRadius:
...
                          height: 58.0,
                        ),
                        Container(
                          child: TextButton(
                              onPressed: () => Get.toNamed('/register'),
                              child: Text(
                                "¿No tienes cuenta? Registrate",
                                style: TextStyle(
                                  color: Color.fromRGBO(255, 154, 81, 1),
                                ),
                              )),
                        )
                      ])),
...
