...
            ),
            ListView(shrinkWrap: true, children: [
              Container(
                color: Color.fromRGBO(255, 174, 116, 1),
                child: ListTile(
                  leading: Icon(Icons.search),
                  title: Text('Buscar',
                      style: TextStyle(
                        fontSize: 18,
                      )),
                  onTap: () {
                    if (Get.currentRoute == "/") {
                      Navigator.of(context).pop();
...
                thickness: 1,
              ),
              Container(
                color: Color.fromRGBO(255, 174, 116, 1),
                child: ListTile(
                  leading: Icon(Icons.person),
                  title: Text('Usuario',
                      style: TextStyle(
                        fontSize: 18,
                      )),
                  onTap: () {
                    if (Get.currentRoute == "/userprofile") {
                      Navigator.of(context).pop();
...
            ),
            _user
                ? Expanded(
                    flex: 1,
                    child: TextButton(
                      child: Text(
                        "Cerrar sesión",
                        style: TextStyle(
                          color: Colors.black,
                          fontSize: 20,
                        ),
                      ),
                      onPressed: () async {
...
                    ),
                  )
                : Expanded(
                    flex: 1,
                    child: TextButton(
                      child: Text(
                        "Iniciar Sesión",
                        style: TextStyle(
                          color: Colors.black,
                          fontSize: 20,
                        ),
                      ),
                      onPressed: () => Get.toNamed('/login'),
...
