...
          await geocoding.placemarkFromCoordinates(
              currentLocation.latitude, currentLocation.longitude);
      originController.text = ubicacionA[0].street;
    }

    return GestureDetector(
      key: Key('HomeG'),
      onTap: () {
        FocusScope.of(context).requestFocus(FocusNode());
      },
      child: Stack(
        children: [
          GoogleMap(
...
                          ),
                          padding: const EdgeInsets.all(20.0),
                          alignment: Alignment.centerLeft,
                          child: ListView(children: [
                            !_destFocus
                                ? textbox(originController, "Lugar de origen",
                                    false, 'origin', _focusOrigin)
                                : Container(),
                            _orFocus
                                ? SizedBox(
                                    height: 10.0,
                                  )
                                : Container(),
...
                                : Container(),
                            !_orFocus
                                ? textbox(
                                    destinationController,
                                    "Lugar de destino",
                                    false,
                                    'destination',
                                    _focusDestination)
                                : Container(),
                            SizedBox(
                              height: 30.0,
                            ),
                            (!_orFocus && !_destFocus)
...
